<resources>
    <string name="app_name">VoiceRecorder</string>
    <string name="default_timer">00:00.00</string>
    <string name="image_button">Image Button</string>
    <string name="VoiceRecorder">Voice Recorder</string>
    <string name="rec_lst">Recorded List</string>
    <string name="media_player">Media Player</string>
    <string name="want_to_save_voice_record">Want to save voice record?</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="vc_tle">Voice Title</string>
    <string name="vc_sub_tle">Voice Sub Title</string>
</resources>