<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:clickable="true"
    android:background="?selectableItemBackground"
    android:padding="20dp"
    android:paddingStart="24dp"
    android:gravity="center_vertical"
    android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:clickable="false"
        android:background="@drawable/ic_circle"
        android:src="@drawable/icon_pl_btn"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/image_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/rec_file_main_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/vc_tle"/>
        <TextView
            android:id="@+id/rec_file_sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="@string/vc_sub_tle"/>
    </LinearLayout>

</LinearLayout>