<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/customized_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/want_to_save_voice_record"
        android:textSize="22sp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/file_name_inp_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="13dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="80dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ext_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            app:backgroundTint="@null"
            android:background="@drawable/customized_button"
            android:text="@string/exit"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sav_btn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/save"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/customized_button"/>
    </LinearLayout>
</LinearLayout>